--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -65,14 +65,14 @@
 	        </div>
 
 	        <div class="section part part_2">
-	        	<div class="section_text" style="width: 100%;padding: 70px 150px;margin: 0;">
+	        	<div class="section_text" style="width: 100%;padding:80px 0 20px 0;margin: 0;">
 			        <div class="row_text">
 			        	<h2>What I do ?</h2>
 			        	<h3 style="color:#777;font-size:1rem; font-weight:300;">Grouped the problems into different categories</h3>
 			        </div>
 			    </div>
 			    <div class="design_img_b">
-					       <img class="design_img_box" src="img/hci_5.png" style="width:60%;">
+					       <img class="design_img_box" src="img/hci_3.png" style="width:60%;">
 				</div>
 	        </div>
 
@@ -82,15 +82,15 @@
                 </div>
 
 	    		<div class="section_text" style="width:35%; z-index:2; position:relative;margin-left:0px;padding-right:20px;">
-			        <div class="title_inside" style="color:#fff;text-align:center;">Observe</div>
-			        <div class="design_ui" style="color:#eee;text-align:center;">
+			        <div class="title_inside" style="color:#fff;text-align:left;padding-left: 100px;">Observe</div>
+			        <div class="design_ui" style="color:#eee;text-align:left;padding-left: 100px;">
 			        	<span>What's the factors would affect user experience ?</span>
 			        </div>
 			    </div>
 	        </div>  
 
 	        <div class="section part part_3">
-	    		<div class="section_text" style="width: 100%;padding: 70px 150px;margin: 0;">
+	    		<div class="section_text" style="width: 100%;padding-bottom:55px;margin: 0;">
 			        <div class="row_text">
 			        	<h2>Challenge</h2>
 			        	<h3 style="color:#777;font-size:1rem; font-weight:300;">Grouped the problems into different categories</h3>
@@ -101,10 +101,10 @@
 				</div>
 		    </div>    
 		    <div class="section part part_4">
-		    	<div class="section_text">
-			        <div class="title_inside">Define the Problems</div>
-			        <div class="design_ui">
-			        	<span></span>
+		    	<div class="section_text" style="width: 30%;margin-left: 0px;">
+			        <div class="title_inside" style="text-align: center; padding:0 20px;">Define Problems</div>
+			        <div class="design_ui" style="max-width:300px;">
+			        	<span>We define the problems into two categories.</span>
 			        </div>
 			    </div>
 
