--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -68,7 +68,7 @@
 	        	<div class="section_text" style="width: 100%;padding:80px 0 20px 0;margin: 0;">
 			        <div class="row_text">
 			        	<h2>What I do ?</h2>
-			        	<h3 style="color:#777;font-size:1rem; font-weight:300;">Grouped the problems into different categories</h3>
+			        	<h3 style="color:#777;font-size:1.25rem; font-weight:200;">Redesign the Media care television App</h3>
 			        </div>
 			    </div>
 			    <div class="design_img_b">
@@ -93,7 +93,7 @@
 	    		<div class="section_text" style="width: 100%;padding-bottom:55px;margin: 0;">
 			        <div class="row_text">
 			        	<h2>Challenge</h2>
-			        	<h3 style="color:#777;font-size:1rem; font-weight:300;">Grouped the problems into different categories</h3>
+			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;">Grouped the problems into different categories</h3>
 			        </div>
 			    </div>
 			    <div class="design_img_b">
@@ -104,7 +104,7 @@
 		    	<div class="section_text" style="width: 30%;margin-left: 0px;">
 			        <div class="title_inside" style="text-align: center; padding:0 20px;">Define Problems</div>
 			        <div class="design_ui" style="max-width:300px;">
-			        	<span>We define the problems into two categories.</span>
+			        	<span>We define the problems into two categories, the <em style="font-style:normal; font-weight:600;">visual problems</em> and the <em style="font-style:normal; font-weight:600;">interaction problems</em></span>
 			        </div>
 			    </div>
 
@@ -113,11 +113,16 @@
                 </div>
 		    </div>
 
-		    <div class="section part part_5" style="background:#258de8;">
-		        <div class="title_inside" style="text-align:center;">Visual Problems</div>
-		        <div class="design_p"><span>- The alert box shows in a unfriendly way.</span></div>
-		        <div class="design_p"><span>- The information shows not clear is a source of confusion.</span></div>
-		        <div class="design_p"><span>- A lot of <em>Unreasonable Layout</em> of the information caused difficulty reading experience.</span></div>
+		    <div class="section part part_5" style="background:#fff;">
+		        <div class="section_text" style="width: 100%;padding-bottom:55px;margin: 0 auto; width:55%;">
+			        <div class="row_text">
+			        	<h2 style="color:#258de8;">Wireframe</h2>
+			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;">We <em style="font-style:normal; font-weight:600;">rearranged</em> information hierarchy  and show the <em style="font-style:normal; font-weight:600;">corn information directly</em>, also rethinked <em style="font-style:normal; font-weight:600;">interaction mode</em> to imporve the user experience.</h3>
+			        </div>
+			    </div>
+			    <div class="design_img_b">
+					       <img class="design_img_box" src="img/hci_4.png" style="width:90%;">
+				</div>
 		    </div>
 		    
 		    <div class="section part part_6">    
