--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -76,7 +76,7 @@
 				</div>
 	        </div>
 
-            <div class="section part part_3" style="background: #258de8;">
+            <div class="section part part_3" style="background: #56B68B;">
             	<div class="section_img" style="background:#fff; width:65%; right:0px;">
                 		<div class="section_bg_img" style="background:url(img/hci_2.png) 50% 50% no-repeat;background-size:80%;"></div>
                 </div>
@@ -155,27 +155,34 @@
 			    </div>
 		    </div>
 		    
-		    <div class="section part part_7">
+		    <div class="section part part_7" style="background:#38ABE8;">
 				<div class="section_img" style="background:#fff; width:65%; right:0px;">
                 		<div class="section_bg_img" style="background:url(img/hci_11.png) 50% 50% no-repeat;background-size:90%;"></div>
                 </div>
 
 	    		<div class="section_text" style="width:35%; z-index:2; position:relative;margin-left:0px;padding-right:20px;">
-			        <div class="title_inside" style="color:#333;text-align:left;padding-left: 100px;">Refine</div>
-			        <div class="design_ui" style="color:#777;text-align:left;padding-left: 100px;">
+			        <div class="title_inside" style="color:#fff;text-align:left;padding-left: 100px;">Refine</div>
+			        <div class="design_ui" style="color:#eee;text-align:left;padding-left: 100px;">
 			        	<span>Refine the design based on the idea that we pick up.</span>
 			        </div>
 			    </div>
 		    </div>
 		    
 		    <div class="section part part_8">
-		        <div class="design_title">VISUAL PROTOTYPE</div>
-		        <div class="design_img"><img src="img/hci_10.png"></div>
+		        <div class="section_text" style="width: 100%;padding-bottom:55px;margin: 0 auto; width:55%;">
+			        <div class="row_text">
+			        	<h2 style="color:#258de8;">Visual Prototype</h2>
+			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;"></h3>
+			        </div>
+			    </div>
+			    <div class="design_img_b">
+					       <img class="design_img_box" src="img/hci_10.png" style="width:70%;">
+				</div>
             </div>
 
             <div class="section part part_9">
-		        <div class="design_title">NEXT STEP</div>
-		        <div class="design_subt" style="max-width:960px; margin:0 auto;"><span>Our team will gather data and analyze those data to find the currect users behaviors. To further understand how the users using our App, design a better user experience.</span></div>
+		        <div class="design_title" style="margin-top:0px;">NEXT STEP</div>
+		        <div class="design_subt" style="max-width:960px; margin:0 auto;padding-top:0px;"><span>Our team will gather data and analyze those data to find the currect users behaviors. To further understand how the users using our App, design a better user experience.</span></div>
             </div>
 
 	      </div>  
