--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -118,8 +118,8 @@
 		    <div class="section part part_5" style="background:#fff;">
 		        <div class="section_text" style="width: 100%;padding-bottom:55px;margin: 0 auto; width:55%;">
 			        <div class="row_text">
-			        	<h2 style="color:#258de8;">Wireframe</h2>
-			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;">We <em style="font-style:normal; font-weight:600;">rearranged</em> information hierarchy  and show the <em style="font-style:normal; font-weight:600;">corn information directly</em>, also rethinked <em style="font-style:normal; font-weight:600;">interaction mode</em> to imporve the user experience.</h3>
+			        	<h2 style="color:#333;">Wireframe</h2>
+			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;">We <em style="font-style:normal; font-weight:600;color:#56B68B;">rearranged</em> information hierarchy  and show the <em style="font-style:normal; font-weight:600;color:#56B68B;">corn information directly</em>, also rethinked <em style="font-style:normal; font-weight:600;color:#56B68B;">interaction mode</em> to imporve the user experience.</h3>
 			        </div>
 			    </div>
 			    <div class="design_img_b">
@@ -130,7 +130,7 @@
 		    <div class="section part part_6">
 		    	<div class="section_text" style="width: 100%;padding-bottom:55px;margin: 0 auto; width:55%;">
 			        <div class="row_text">
-			        	<h2 style="color:#258de8;">User Testing</h2>
+			        	<h2 style="color:#333;">User Testing</h2>
 			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;">Engineers help us to build five simply prototypes doing user test. Then anaylze which one is more better, also find the problems that we neglected.</h3>
 			        </div>
 			    </div>
