--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -53,7 +53,7 @@
 
 	        <div class="section part part_1">
 	        	<div class="section_img" style="background:#258de8;width:40%;">
-                		<div class="section_bg_img" style="background:url(img/hci_3.3.png) 50% 50% no-repeat;background-size:80%;"></div>
+                		<div class="section_bg_img section_bg_img_1" style="background:url(img/hci_3.3.png) 50% 50% no-repeat;background-size:80%;"></div>
                 </div>
 
 	    		<div class="section_text" style="width:45%; z-index:2; position:relative;">
@@ -71,13 +71,13 @@
 			        	<h3 style="color:#777;font-size:1.25rem; font-weight:200;">Redesign the Media care television App</h3>
 			        </div>
 			    </div>
-			    <div class="design_img_b">
+			    <div class="design_img_b design_img_b_1">
 					       <img class="design_img_box" src="img/hci_3.png" style="width:60%;">
 				</div>
 	        </div>
 
-            <div class="section part part_3" style="background: #56B68B;">
-            	<div class="section_img" style="background:#fff; width:65%; right:0px;">
+            <div class="section part part_3" style="background: #258de8;">
+            	<div class="section_img">
                 		<div class="section_bg_img" style="background:url(img/hci_2.png) 50% 50% no-repeat;background-size:80%;"></div>
                 </div>
 
@@ -101,10 +101,10 @@
 				</div>
 		    </div>    
 		    <div class="section part part_4">
-		        <div class="section_img" style="left:0;background:#fff;">
+		        <div class="section_img" style="left:0;background:#fff;width:70%;">
                 		<div class="section_bg_img" style="padding:97px 0;">
-                			<div style="background:url(img/hci_12.png) 50% 50% no-repeat;background-size:contain;height:50%;"></div>
-                			<div style="background:url(img/hci_13.png) 50% 50% no-repeat;background-size:contain;height:50%;"></div>
+                			<div class="s_b_i_1" style="background:url(img/hci_12.png) 50% 50% no-repeat;background-size:contain;height:50%;"></div>
+                			<div class="s_b_i_2" style="background:url(img/hci_13.png) 50% 50% no-repeat;background-size:contain;height:50%;"></div>
                 		</div>
                 </div>
                 <div class="section_text" style="width: 30%;margin:0;position:absolute;padding-top:35vh;right:0; background:#258de8;height:100%;top:0;">
@@ -119,7 +119,7 @@
 		        <div class="section_text" style="width: 100%;padding-bottom:55px;margin: 0 auto; width:55%;">
 			        <div class="row_text">
 			        	<h2 style="color:#333;">Wireframe</h2>
-			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;">We <em style="font-style:normal; font-weight:600;color:#56B68B;">rearranged</em> information hierarchy  and show the <em style="font-style:normal; font-weight:600;color:#56B68B;">corn information directly</em>, also rethinked <em style="font-style:normal; font-weight:600;color:#56B68B;">interaction mode</em> to imporve the user experience.</h3>
+			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;">We <em style="font-style:normal; font-weight:600;color:#258de8;">rearranged</em> information hierarchy  and show the <em style="font-style:normal; font-weight:600;color:#258de8;">corn information directly</em>, also rethinked <em style="font-style:normal; font-weight:600;color:#258de8;">interaction mode</em> to imporve the user experience.</h3>
 			        </div>
 			    </div>
 			    <div class="design_img_b">
@@ -155,7 +155,7 @@
 			    </div>
 		    </div>
 		    
-		    <div class="section part part_7" style="background:#38ABE8;">
+		    <div class="section part part_7" style="background:#258de8;">
 				<div class="section_img" style="background:#fff; width:65%; right:0px;">
                 		<div class="section_bg_img" style="background:url(img/hci_11.png) 50% 50% no-repeat;background-size:90%;"></div>
                 </div>
@@ -181,8 +181,12 @@
             </div>
 
             <div class="section part part_9">
-		        <div class="design_title" style="margin-top:0px;">NEXT STEP</div>
-		        <div class="design_subt" style="max-width:960px; margin:0 auto;padding-top:0px;"><span>Our team will gather data and analyze those data to find the currect users behaviors. To further understand how the users using our App, design a better user experience.</span></div>
+            	<div class="section_text" style="width: 100%;padding-bottom:55px;margin: 0;">
+			        <div class="row_text">
+			        	<h2>Next Step</h2>
+			        	<div class="design_subt" style="color:#777; font-weight:200;max-width:960px; margin:0 auto;padding-top:0px;"><span>Our team will gather data and analyze those data to find the currect users behaviors. To further understand how the users using our App, design a better user experience.</span></div>
+			        </div>
+			    </div>
             </div>
 
 	      </div>  
