--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -144,7 +144,7 @@
 		    			</div>
 
 		    			<div class="row">
-		    				<div class="wireframe-step">
+		    				<div class="wireframe-step wireframe_step_1">
 		    					<div class="wireframe-step-box">
 		    					<span class="number" style="">1</span>
 		    					<p class="on-left">
@@ -156,7 +156,7 @@
 		    					</div>
 		    				</div>
 
-		    				<div class="wireframe-step">
+		    				<div class="wireframe-step wireframe_step_2">
 		    					<div class="wireframe-step-box">
 		    					<span class="number" style="">2</span>
 		    					<p class="on-left">
@@ -167,7 +167,7 @@
 		    					</div>
 		    				</div>
 
-		    				<div class="wireframe-step">
+		    				<div class="wireframe-step wireframe_step_3">
 		    					<div class="wireframe-step-box">
 		    					<span class="number" style="">3</span>
 		    					<p class="on-left">
@@ -180,7 +180,7 @@
 		    			</div>
 
 		    			<div class="row">
-		    				<div class="wireframe-step">
+		    				<div class="wireframe-step wireframe_step_4">
 		    					<div class="wireframe-step-box">
 		    					<span class="number" style="">4</span>
 		    					<p class="on-left">
@@ -191,7 +191,7 @@
 		    				    </div>
 		    				</div>
 
-		    				<div class="wireframe-step">
+		    				<div class="wireframe-step wireframe_step_5">
 		    					<div class="wireframe-step-box">
 		    					<span class="number">5</span>
 		    					<p class="on-left">
@@ -209,11 +209,11 @@
 
 			<div class="section part part_8">   
 		        <div class="design_title_left"><span><p>DEFINE A COLOR LANGUAGE TO IMPROVE USER EXPERIENCE</p></span></div>
-		        <div class="design_img" style="width: 60%;float: right;"><img src="img/Group.png" style="width:75%;"></div>
+		        <div class="design_img design_img_ani" style="width: 60%;float:right;"><img src="img/Group.png" style="width:75%;"></div>
 		    </div>
 
 		    <div class="section part part_9">
-		        <div class="row_text" style="margin-top: 97px;">
+		        <div class="row_text row_text_ani">
 		    					<h2>VISUAL REDESIGN</h2>
 		    					<h3 style="color:#777;font-size:1rem; font-weight:300;">I ended up re-designed the entire User Interface, here’s the few final delivery:</h3>
 		        </div>
@@ -222,13 +222,12 @@
 				</div>
             </div>
 
-            <!--<div class="section part part_10"> 
+            <div class="section part part_10"> 
 		        <div class="row_text">
-		        	<h2>FURTHER</h2>
-		        	<iframe src="https://marvelapp.com/1f48a4g?emb=1" width="948" height="676" allowTransparency="true" frameborder="0"></iframe>
-			        <h3 style="color:#777;font-size:1rem; font-weight:300;"></h3>
-			    </div>
-            </div> -->
+			        	<h2>Future</h2>
+			        	<div class="design_subt" style="color:#777; font-weight:200;max-width:960px; margin:0 auto;padding-top:0px;"><span>Continue working with teacher group, analyze valueable information that we record, find more valuable data information for user.</span></div>
+			        </div>
+            </div>
 	      </div>  
 	    </div>
     
