--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -7,8 +7,7 @@
     <meta name="title" content=""/>
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
-    <title>Shuai | SoHu Film</title>
-    <!--<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>-->
+    <title>Shuai | See Word Reading</title>
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
@@ -18,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css">
     <link rel="stylesheet" type="text/css" href="css/wireframe.css">
     <link rel="stylesheet" type="text/css" href="css/nav.css">
+    <link rel="stylesheet" type="text/css" href="css/font.css">
 </head>
 <body>
 	<div class="BD">
@@ -46,15 +46,18 @@
 	      <div class="container_box cb_sohufilm">
 
 	        <div class="section part part_0">
-	    		<div class="slide title_inside"><span style="top:0;">SoHu Film Website</span></div>
+	    		<div class="slide title_inside"><span>SoHu Film Website</span></div>
 	    		<a class="btn_down" href="#page2"><span class="btn_down_el"></span></a>
 	        </div>
 
 	       <div class="section part part_1">
-	       	<div class="web_link"><a style="text-decoration:underline;" href="http://film.sohu.com" target="_Blank">www.film.sohu.com</a></div>
-	        <div class="design_ui"><span>Provide a better online <em>Movie-Going EXPERIENCE</em></span></div>
-		        <div class="design_t_p"><span>SoHu Film Website is a website which provided premium movies. Early in the project, I responsible for user research and imporve the user experience. Later, I responsible for interaction design and front-end program.</span></div>
-	        </div>
+	       	    <div class="row_text">
+		    		<h2>What's the Sohu Film website?</h2>
+		    		<div class="web_link"><a style="text-decoration:underline;" href="http://film.sohu.com" target="_Blank">www.film.sohu.com</a></div>
+		    	</div>
+		        <div class="design_t_p" style="color:#777;font-size:1rem; font-weight:200;"><span>SoHu Film Website is a website which provided a <em>better online Movie-Going EXPERIENCE</em>. Early in the project, I responsible for user research and imporve the user experience. Later, I responsible for interaction design and front-end program.</span></h3>
+		        </div>
+		    </div>    
 
 	       <div class="section part part_2">
 	        <div class="design_title">DESIGN PROCESS</div>
