--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -93,7 +93,7 @@
 	    		<div class="section_text" style="width: 100%;padding-bottom:55px;margin: 0;">
 			        <div class="row_text">
 			        	<h2>Challenge</h2>
-			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;">Grouped the problems into different categories</h3>
+			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;">Grouped the challenges into different categories</h3>
 			        </div>
 			    </div>
 			    <div class="design_img_b">
