--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -78,7 +78,7 @@
 
             <div class="section part part_3" style="background: #258de8;">
             	<div class="section_img">
-                		<div class="section_bg_img" style="background:url(img/hci_2.png) 50% 50% no-repeat;background-size:80%;"></div>
+                		<div class="section_bg_img section_bg_img_ani" style="background:url(img/hci_2.png) 50% 50% no-repeat;background-size:80%;"></div>
                 </div>
 
 	    		<div class="section_text" style="width:35%; z-index:2; position:relative;margin-left:0px;padding-right:20px;">
@@ -156,7 +156,7 @@
 		    </div>
 		    
 		    <div class="section part part_7" style="background:#258de8;">
-				<div class="section_img" style="background:#fff; width:65%; right:0px;">
+				<div class="section_img section_img_ani">
                 		<div class="section_bg_img" style="background:url(img/hci_11.png) 50% 50% no-repeat;background-size:90%;"></div>
                 </div>
 
