--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css">
     <link rel="stylesheet" type="text/css" href="css/wireframe.css">
     <link rel="stylesheet" type="text/css" href="css/nav.css">
-     <link rel="stylesheet" type="text/css" href="css/font.css">
+    <link rel="stylesheet" type="text/css" href="css/font.css">
 </head>
 <body>
 	<div class="BD">
@@ -100,8 +100,8 @@
 	    		<div class="section_text">
 			        <div class="title_inside"> Research & <br> Key Problems</div>
 			        <div class="design_ui">
-			        	<span><em style="color:#71C0C9; font-weight:300; font-style:normal; font-size:1.5rem; font-style: normal;">+ </em><b> Jumbled Information</b></span><br>
-			        	<span><em style="color:#71C0C9; font-weight:300; font-style:normal; font-size:1.5rem;">+ </em><b> Complicated Operation</b></span><br>
+			        	<span><em style="color:#71C0C9; font-weight:300; font-style:normal; font-size:1.5rem; font-style: normal;">+ </em><b> Complex Information</b></span><br>
+			        	<span><em style="color:#71C0C9; font-weight:300; font-style:normal; font-size:1.5rem;">+ </em><b> Confused Operation</b></span><br>
 			        	<span><em style="color:#71C0C9; font-weight:300; font-style:normal; font-size:1.5rem;">+ </em><b> Unfriendly User Experience</b></span>
 			        </div>
 			    </div>
