--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -60,29 +60,38 @@
 		    </div>    
 
 	       <div class="section part part_2">
-	        <div class="design_title">DESIGN PROCESS</div>
-	        <div class="title_line"></div>
-	        <div class="design_img"><img src="img/film.png"></div>
+	       	    <div class="section_text" style="width: 100%;margin: 0;height:50%;background:rgb(43,178,123);">
+			        <div class="row_text" style="padding:157px 0 0 0;">
+			        	<h2 style="color:#fff;">Interview & Benchmark</h2>
+			        	<h3 style="color:#eee;font-size:1.25rem; font-weight:200;width:55%;margin:0 auto;">Invited the users used few of similar products made by other company. Getiing some feedbacks and the suggests from them. </h3>
+			        </div>
+			    </div>
+			    <div class="design_img_b design_img_b_1" style="height:50%;">
+					       <img class="design_img_box" src="img/film3.4.png" style="width:40%;">
+				</div>
 	       </div>
 	       
-	       <div class="section part part_3"> 
-	        <section class="film_box film_box_1">
-	        <div class="design_title">INTERVIEW & BENCHMARK</div>
-	        <div class="design_p"><span>Invited the users used few of similar products made by other company. Getiing some feedbacks and the suggests from them. </span></div>
-	        <div class="design_img"><img src="img/film3.4.png"></div>
-	         <div class="design_p" style="text-align:center;"><span>We divided problems into <em>Three Categorise</em></span></div>
-	        <div class="design_img"><img src="img/film1.png"></div>
-	        </section>
+	       <div class="section part part_3" style="background:rgb(43,178,123);">
+	            <div class="section_img" style="background:#fff; width:65%;">
+                		<div class="section_bg_img" style="background:url(img/film1.png) 50% 50% no-repeat;background-size:95%;"></div>
+                </div>
+
+	    		<div class="section_text" style="width:35%; z-index:2; position:relative;margin-left:0px;padding-right:20px;">
+			        <div class="title_inside" style="color:#fff;text-align:left;padding-left: 100px;">Problems</div>
+			        <div class="design_ui" style="color:#eee;text-align:left;padding-left: 100px;">
+			        	<span>We divided problems into <em style="color:#fff;">Three Categorise</em></span>
+			        </div>
+			    </div>
 	       </div>
 
 	       <div class="section part part_4">
-	        <section class="film_box film_box_2">
-	        <div class="design_title">IDEATION</div>
-	        <div class="design_ui"><span>Information Structure</span></div>
-	        <div class="design_img_high"><img src="img/film2.png"></div>
-	        <div class="design_ui"><span>Wireframe and Prototype</span></div>
-	        <div class="design_img"><img src="img/film4.png"></div>
-	        </section>
+	       	<div class="section_img" style="left:0;background:#fff;width:70%;">
+                		<div class="section_bg_img" style="background:url(img/film2.png) 50% 50% no-repeat;background-size:80%;">
+                		</div>
+                </div>
+                <div class="section_text" style="width: 30%;margin:0;position:absolute;padding-top:45vh;right:0;background:rgb(43,178,123);height:100%;top:0;">
+			        <div class="title_inside" style="color:#fff; text-align: center; padding:0 20px;">Information Structure</div>
+			    </div>
 	       </div>
 
 	       <div class="section part part_5"> 
