--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		<div class="header">
 			<div class="header-box">
 			<div class="top-img">
-				<a href="index.html"><span class="logo_img"></span></a>
-			</div>
+        <a href="index.html"><span class="logo_img seeword_logo_img"></span></a>
+      </div>
 				
             <div id="navbar" class="menu">
               <a href="#" class="menubtn">menu</a>
