--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -94,12 +94,32 @@
 			    </div>
 	       </div>
 
-	       <div class="section part part_5"> 
-	        <section class="film_box film_box_3">
-	        <div class="design_title">USABILITY TESTING</div>
-	        <div class="design_p"><span>There were 30 users to help us to do the user testing, we record the process to observe how the user find the movie which they want. <br> We find there has two groups, one of the group known which movie they want see， other group just want find a good movie to kill the time. </span></div>
-	        <div class="design_img"><img src="img/film3.3.png"></div>
-	        </section>
+	       <div class="section part part_5" style="background:rgb(43,178,123);">
+	       	            <div class="row" style="padding-bottom: 40px;">
+		    				<div class="row_text">
+		    					<h2 style="color:#fff;">Sketch & Wireframe</h2>
+		    				</div>
+		    			</div>
+
+			    	<div class="row">
+		    				<div class="row_box row_1">
+		    					<div class="row_wireframe">
+		    					<p>
+		    						<span class="text" style="color:#eee;">Sketch</span>
+		    					</p>
+		    				    	<img src="img/film3.png">
+		    					</div>
+		    				</div>
+
+		    				<div class="row_box row_2">
+		    					<div class="row_wireframe">
+		    					<p>
+		    						<span class="text" style="color:#eee;">Wireframe</span>
+		    					</p>
+		    				    	<img src="img/film4.png">
+		    					</div>
+		    				</div>
+		    		</div>
 	       </div>
 	       
 	       <div class="section part part_6"> 
