--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -61,7 +61,7 @@
 
 	       <div class="section part part_2">
 	       	    <div class="section_text" style="width: 100%;margin: 0;height:50%;background:rgb(43,178,123);">
-			        <div class="row_text" style="padding:157px 0 0 0;">
+			        <div class="row_text" style="padding:97px 0 0 0;">
 			        	<h2 style="color:#fff;">Interview & Benchmark</h2>
 			        	<h3 style="color:#eee;font-size:1.25rem; font-weight:200;width:55%;margin:0 auto;">Invited the users used few of similar products made by other company. Getiing some feedbacks and the suggests from them. </h3>
 			        </div>
@@ -122,10 +122,16 @@
 		    		</div>
 	       </div>
 	       
-	       <div class="section part part_6"> 
-	        <section class="film_box film_box_3">
-	        <div class="design_title">REFINE</div>
-	        </section>
+	       <div class="section part part_6">
+	       	<div class="section_text" style="width: 100%;margin: 0;height:50%;background:rgb(43,178,123);">
+			        <div class="row_text" style="padding:97px 0 0 0;">
+			        	<h2 style="color:#fff;">Refine Process</h2>
+			        	<h3 style="color:#eee;font-size:1.25rem; font-weight:200;width:55%;margin:0 auto;"></h3>
+			        </div>
+			    </div>
+			    <div class="design_img_b" style="height:50%;">
+					       <img class="design_img_box" src="img/film5.png" style="width:70%;padding-top:35px;">
+				</div>
 	       </div>
 
 	       <div class="section part part_6">
