--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-sohufilm.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color: #ffd316;" title="SoHu Film Website Project">
+                  <a href="portfolio-sohufilm.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:rgb(43,178,123);" title="SoHu Film Website Project">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/film_b.jpg); background-position:center; background-size:cover;"></div>
                     </span>
