--- a/portfolio-hci.html
+++ b/portfolio-hci.html
@@ -129,12 +129,12 @@
 		    
 		    <div class="section part part_6">
 		    	<div class="section_text" style="width: 100%;padding-bottom:55px;margin: 0 auto; width:55%;">
-			        <div class="row_text">
+			        <div class="row_text row_text_1">
 			        	<h2 style="color:#333;">User Testing</h2>
 			        	<h3 style="color:#777;font-size:1.25rem; font-weight:300;">Engineers help us to build five simply prototypes doing user test. Then anaylze which one is more better, also find the problems that we neglected.</h3>
 			        </div>
 			    </div>
-			    <div class="design_img_b">
+			    <div class="design_img_b design_img_b_2">
 					       <img class="design_img_box" src="img/hci_9.png" style="width:90%;">
 				</div>
 		    </div>
