--- a/portfolio-seewordapp.html
+++ b/portfolio-seewordapp.html
@@ -222,11 +222,13 @@
 				</div>
             </div>
 
-            <div class="section part part_10"> 
-		        <div class="row_text">
+            <div class="section part part_10">
+            <div class="section_text" style="width: 100%;padding-bottom:150px;margin: 0;">
+			        <div class="row_text">
 			        	<h2>Future</h2>
 			        	<div class="design_subt" style="color:#777; font-weight:200;max-width:960px; margin:0 auto;padding-top:0px;"><span>Continue working with teacher group, analyze valueable information that we record, find more valuable data information for user.</span></div>
 			        </div>
+			    </div>
             </div>
 	      </div>  
 	    </div>
