--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/sce1.png); background-position:center; background-size:cover;"></div>
                     </span>
                     <span>
-                        <h2 class="heading2" style="color:#fff;">Sohu SCE Website</h2>
+                        <h2 class="heading2" style="color:#fff;">Sohu Fans App</h2>
                     </span>
                   </a>
               </div>
