--- a/portfolio-sohufilm.html
+++ b/portfolio-sohufilm.html
@@ -60,8 +60,8 @@
 		    </div>    
 
 	       <div class="section part part_2">
-	       	    <div class="section_text" style="width: 100%;margin: 0;height:50%;background:rgb(43,178,123);">
-			        <div class="row_text" style="padding:97px 0 0 0;">
+	       	    <div class="section_text" style="width: 100%;margin: 0;height:50%;background:#333;">
+			        <div class="row_text" style="padding:157px 0 0 0;">
 			        	<h2 style="color:#fff;">Interview & Benchmark</h2>
 			        	<h3 style="color:#eee;font-size:1.25rem; font-weight:200;width:55%;margin:0 auto;">Invited the users used few of similar products made by other company. Getiing some feedbacks and the suggests from them. </h3>
 			        </div>
@@ -172,10 +172,7 @@
            </div>
 	      </div>  
 	    </div>
-    
-    <div id="go-top">
-    	<a href=""><span></span></a>
-    </div>
+
 
 	<!--底页-->
 <div class="footer">
