--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-hci.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color: #eff7f9;" title="Health Care Information TV APP Project">
+                  <a href="portfolio-hci.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:rgb(37,141,232);" title="Health Care Information TV APP Project">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/hci_b.jpg); background-position:center; background-size:cover;"></div>
                     </span>
@@ -99,12 +99,12 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-sohufilm.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:rgb(43,178,123);" title="SoHu Film Website Project">
+                  <a href="portfolio-sohufilm.html" class="works_category_tiles_item works_category_tiles_item2_1" style="background-color:#F13929;" title="SoHu Film Website Project">
                     <span class="works_category_tiles_item_cover bg">
                       <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/film_b.jpg); background-position:center; background-size:cover;"></div>
                     </span>
                     <span>
-                        <h2 class="heading2">Sohu Film Website</h2>
+                        <h2 class="heading2" style="color:#fff;">Sohu Film Website</h2>
                     </span>
                   </a>
               </div>
@@ -112,9 +112,9 @@
 
             <section class="container_piece container_piece_1" style="height:400px;">
               <div class="works_category_tiles"> 
-                  <a href="portfolio-sce.html" class="works_category_tiles_item works_category_tiles_item2_2" style="background-color: #666;" title="SoHu Cloud Engine Project">
+                  <a href="portfolio-sohufan.html" class="works_category_tiles_item works_category_tiles_item2_2" style="background-color: #f6cb21;" title="SoHu Cloud Engine Project">
                     <span class="works_category_tiles_item_cover bg">
-                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/sce1.png); background-position:center; background-size:cover;"></div>
+                      <div class="works_category_tiles_item_cover_img bg_image" style="background:url(img/5.png) 50% 50% no-repeat; background-size:contain;"></div>
                     </span>
                     <span>
                         <h2 class="heading2" style="color:#fff;">Sohu Fans App</h2>
