--- a/portfolio-sohufan.html
+++ b/portfolio-sohufan.html
@@ -7,10 +7,17 @@
     <meta name="title" content=""/>
     <meta name="description" content=""/>
     <meta name="keywords" content=""/>
-    <title>Shuai | SoHu Dramas Fans APP</title>
+    <title>Shuai | See Word Reading</title>
     <link rel="stylesheet" type="text/css" href="css/css3.css">
     <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
     <script type="text/javascript" src="js/myjs.js"></script>
+    <script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
+    <script type="text/javascript" src="js/menu.js"></script>
+    <script type="text/javascript" src="js/jquery-ui.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css">
+    <link rel="stylesheet" type="text/css" href="css/wireframe.css">
+    <link rel="stylesheet" type="text/css" href="css/nav.css">
+    <link rel="stylesheet" type="text/css" href="css/font.css">
 </head>
 <body>
 	<div class="BD">
@@ -18,12 +25,21 @@
 		<div class="header">
 			<div class="header-box">
 			<div class="top-img">
-				<a href="index.html"><img src="img/logo.png"></a>
+				<a href="index.html"><span class="logo_img seeword_logo_img"></span></a>
 			</div>
-				<ul class="menu">
-					<li class="selected"><a href="portfolio.html">PORTFOLIO</a></li>
-					<li><a href="resume.html">RESUME</a></li>
-				</ul>
+
+			<div id="navbar" class="menu">
+		      <a href="#" class="menubtn">menu</a>
+		      <!-- use captain icon for toggle menu -->
+		      <div id="hamburgermenu" style="overflow: hidden; width: 0px;">
+		        <ul>
+		          <li><a href="portfolio.html">PORTFOLIO</a></li>
+		          <li><a href="resume.html">RESUME</a></li>
+		          <li><a href="myself.html">ABOUT ME</a></li>
+		        </ul>
+		      </div>
+		    </div>
+
 		</div>
 		</div>
 
@@ -59,9 +75,6 @@ for an Simple and Clearly.</span></div>
 	      </div> 
 	    </div>
     
-    <div id="go-top">
-    	<a href=""><span></span></a>
-    </div>
 
 	<!--底页-->
 <div class="footer">
